--- a/manifest.json
+++ b/manifest.json
@@ -12,20 +12,17 @@
         "default_popup": "popup.html",
         "default_title": "自定义的扩展",
         "default_icon": {
-            "16": "images/icon16.png",
-            "128": "images/icon128.png"
+            "16": "images/icon16.png"
         }
     },
-    "background": { 
-        "scripts": ["js/menu.js"] 
+    "background": {
+        "scripts": ["js/menu.js"]
     },
-    "content_scripts":[
-        {
-            "matches": ["<all_urls>"],
-            "js": ["js/test.js"],
-            "css": ["css/add.css"],
-            "run_at": "document_start"
-        }
-    ],
-    "permissions": ["tabs","contextMenus","http://*/*","https://*/*"]
+    "content_scripts": [{
+        "matches": ["<all_urls>"],
+        "js": ["js/test.js"],
+        "css": ["css/add.css"],
+        "run_at": "document_start"
+    }],
+    "permissions": ["tabs", "contextMenus", "https://*/*"]
 }
